[gd_scene load_steps=4 format=3 uid="uid://dg37hpic4jlqm"]

[ext_resource type="Script" path="res://Menu.gd" id="1_0yun8"]
[ext_resource type="Texture2D" uid="uid://mx6xpujbrs22" path="res://assets/images/Chaye_Runner.png" id="2_0txjv"]
[ext_resource type="FontFile" uid="uid://dmuxngsjq25tt" path="res://Fonts/Roboto-Black.ttf" id="3_hplf8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 224.0
offset_top = 290.0
offset_right = 224.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yun8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -220.0
offset_top = -287.0
offset_right = 1700.0
offset_bottom = 793.0
scale = Vector2(1.04127, 1.09157)
texture = ExtResource("2_0txjv")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.601
offset_top = -5.90747
offset_right = 24.3993
offset_bottom = 75.0925
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2026, 1.76556)

[node name="StartButton" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hplf8")
theme_override_font_sizes/font_size = 16
text = "Start"

[node name="CheckBox" type="CheckBox" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "FullScreen"

[node name="CheckButton" type="CheckButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_pressed = true
text = "Audio"

[node name="CheckButton2" type="CheckButton" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "DeepFried"

[connection signal="pressed" from="TextureRect/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="ready" from="TextureRect/VBoxContainer/CheckBox" to="." method="_on_check_box_ready"]
[connection signal="toggled" from="TextureRect/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="ready" from="TextureRect/VBoxContainer/CheckButton" to="." method="_on_check_button_ready"]
[connection signal="toggled" from="TextureRect/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="ready" from="TextureRect/VBoxContainer/CheckButton2" to="." method="_on_check_button_2_ready"]
[connection signal="toggled" from="TextureRect/VBoxContainer/CheckButton2" to="." method="_on_check_button_2_toggled"]
